Facet searching on AI generated attributes (#20)
